--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -15,7 +15,7 @@
       <tbody>
         <% @players.each do |player| %>
           <tr>
-            <td><%= player.name %></td>
+            <td><%= player_name_by_consent(player, current_user) %></td>
             <td><span class="badge badge-pill badge-light"><%= player.category.name %></span></td>
             <td>
               <%= link_to 'Detail', player_path(player), class: 'btn btn-sm btn-success' %>
