--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,7 +14,7 @@
           <%= link_to 'Novinky', articles_path, class: 'nav-link'  %>
         </li>
         <li class="nav-item">
-          <%= link_to 'Hráči', players_path, class: 'nav-link'  %>
+          <%= link_to 'Hráči', enrollments_path, class: 'nav-link'  %>
         </li>
         <li class="nav-item">
           <%= link_to 'O súťaži', pages_about_path, class: 'nav-link'  %>
