--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -27,7 +27,8 @@
               Administrácia
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <%= link_to 'Kolá', rounds_path, class: 'dropdown-item' %>
+              <%= link_to 'Kolá a zápasy', rounds_path, class: 'dropdown-item' %>
+              <%= link_to 'Hráči', enrollments_path, class: 'dropdown-item'  %>
               <%= link_to 'Kategórie', categories_path, class: 'dropdown-item'  %>
             </div>
           </li>
