Views and UX changes

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -73,7 +73,7 @@
 <hr>
 <h4>Viac info a prihlásenie:</h4>
 <p class="text-center">
-  Ondrej Babala ● <strong><%= link_to '0908 304 473', 'tel:0908304473'%></strong><br>
+  Ondrej Babala ● <strong><%= link_to_manager_phone %></strong><br>
   Milan Kyseľ<br>
   Andrej Golej<br>
   <%= link_to root_url, root_url %><br>
