--- a/app/views/matches/_table_row.html.erb
+++ b/app/views/matches/_table_row.html.erb
@@ -15,10 +15,10 @@
     <br>
     <small>
       <i>
-        <% if match.player1.consent_given? %>
+        <% if match.player1.phone.present? && match.player1.consent_given? %>
           <%= link_to match.player1.phone, "tel:#{match.player1.phone}" %>
         <% else %>
-          tel. č. u organizátora
+          <%= link_to_manager_phone('tel. č. u organizátora') %>
         <% end %>
       </i>
     </small>
@@ -39,10 +39,10 @@
     <br>
     <small>
       <i>
-        <% if match.player2.consent_given? %>
+        <% if match.player2.phone.present? && match.player2.consent_given? %>
           <%= link_to match.player2.phone, "tel:#{match.player2.phone}" %>
         <% else %>
-          tel. č. u organizátora
+          <%= link_to_manager_phone('tel. č. u organizátora') %>
         <% end %>
       </i>
     </small>
