--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -14,15 +14,15 @@
   <div class="col-sm-12 col-md-6">
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
-        <p class="lead text-center">Tel.:<span class="px-2"><%= @player.phone.present? && (user_signed_in? || @player.consent_given?) ? link_to(@player.phone, "tel:#{@player.phone}") : '-' %></span></p>
-        <p class="lead text-center">Email:<span class="px-2"><%= @player.email.present? && (user_signed_in? || @player.consent_given?) ? link_to(@player.email, "mailto:#{@player.email}") : '-' %></span></p>
+        <p class="lead text-center">Tel.:<span class="px-2"><%= @player.phone.present? && (user_signed_in? || @player.consent_given?) ? link_to(@player.phone, "tel:#{@player.phone}") : maybe_missing(@player.phone) %></span></p>
+        <p class="lead text-center">Email:<span class="px-2"><%= @player.email.present? && (user_signed_in? || @player.consent_given?) ? link_to(@player.email, "mailto:#{@player.email}") : maybe_missing(@player.email) %></span></p>
       </div>
     </div>
   </div>
   <div class="col-sm-12 col-md-6">
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
-        <p class="lead text-center">Rok nar.:<span class="px-2"><%= @player.birth_year.present? ? @player.birth_year : '-' %></span></p>
+        <p class="lead text-center">Rok nar.:<span class="px-2"><%= maybe_missing(@player.birth_year) %></span></p>
         <p class="lead text-center"><%= @player.category.name %></p>
       </div>
     </div>
