--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -13,7 +13,7 @@
           </small>
         </p>
         <p class="text-center">
-          <%= link_to '0908 304 473', 'tel:0908304473' %>
+          <%= link_to_manager_phone %>
     		</p>
       </div>
     </div>
