Success of play

--- a/app/views/rankings/index.html.erb
+++ b/app/views/rankings/index.html.erb
@@ -40,7 +40,7 @@
             Body
             <span class="text-nowrap">
               súperov
-              <span data-toggle="tooltip" data-placement="left", title="Súčet bodov tých hráčov, s ktorými má hráč odohratý zápas v tejto sezóne vrátane tohto kola">
+              <span data-toggle="tooltip" data-placement="left" title="Súčet bodov tých hráčov, s ktorými má hráč odohratý zápas v tejto sezóne vrátane tohto kola">
                 <%= fa_icon 'question-circle' %>
               </span>
             </span>
