--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -28,6 +28,38 @@
     </div>
   </div>
 </div>
+<% if @success_of_play.values.select { |v| !v.blank? }.any? %>
+  <hr>
+  <div class="row">
+    <div class="col">
+      <p class="lead text-center">
+        Úspešnosť hry
+        <span data-toggle="tooltip" data-placement="top" title="Pomer vyhratých gemov ku všetkým odohraným">
+          <%= fa_icon 'question-circle' %>
+        </span>
+      </p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12 col-md-6">
+      <div class="card mb-3 <%= success_of_play_color_class(@success_of_play[:season]) %>">
+        <div class="card-header"><%= "V sezóne #{selected_season.name}" %></div>
+        <div class="card-body">
+          <h5 class="card-title"><%= @success_of_play[:season] ? "#{@success_of_play[:season]}%" : '(žiadne zápasy)' %></h5>
+        </div>
+      </div>
+    </div>
+    <div class="col-12 col-md-6">
+      <div class="card mb-3 <%= success_of_play_color_class(@success_of_play[:history]) %>">
+        <div class="card-header">V histórii súťaže</div>
+        <div class="card-body">
+          <h5 class="card-title"><%= @success_of_play[:history] ? "#{@success_of_play[:history]}%" : '(žiadne zápasy)' %></h5>
+        </div>
+      </div>
+    </div>
+  </div>
+<% end %>
+<hr>
 <div class="row">
   <div class="col">
     <p class="lead text-center">
