--- a/app/views/enrollments/index.html.erb
+++ b/app/views/enrollments/index.html.erb
@@ -8,6 +8,7 @@
       <thead class="thead-dark">
       <tr>
         <th scope="col">Meno</th>
+        <th scope="col">Dátum prihlášky</th>
         <th scope="col">Kategória</th>
         <% if user_signed_in? %>
           <th scope="col"></th>
@@ -18,6 +19,7 @@
       <% @enrollments.each do |enrollment| %>
         <tr>
           <td><%= link_to player_name_by_consent(enrollment.player, current_user), player_path(enrollment.player), class: 'quiet-link' %></td>
+          <td><%= I18n.localize(enrollment.created_at, format: :date_month_year) %></td>
           <td><span class="badge badge-pill badge-light"><%= enrollment.player.category.name %></span></td>
           <% if user_signed_in? %>
             <td>
