Changes related to displaying payments and balance

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <% unless @payment_balance.nil? %>
+    <% if user_signed_in? && @payment_balance.present? %>
       <%= render 'payments/payment_balance' %>
     <% end %>
     <%= render 'shared/navbar' %>
