--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -30,6 +30,7 @@
               <%= link_to 'Kolá a zápasy', rounds_path, class: 'dropdown-item' %>
               <%= link_to 'Hráči', enrollments_path, class: 'dropdown-item'  %>
               <%= link_to 'Kategórie', categories_path, class: 'dropdown-item'  %>
+              <%= link_to 'Kredit', payments_path, class: 'dropdown-item' %>
             </div>
           </li>
           <li class="nav-item dropdown">
