--- a/app/views/enrollments/index.html.erb
+++ b/app/views/enrollments/index.html.erb
@@ -1,7 +1,7 @@
 <% if user_signed_in? %>
   <%= link_to 'Pridať hráča', new_enrollment_path, class: 'btn btn-sm btn-success my-1' %>
 <% end %>
-<p class="lead">Zoznam hráčov (<%= @enrollments.count %>)</p>
+<p class="lead"><%= "Zoznam hráčov sezóny #{selected_season.name} (#{@enrollments.count})" %></p>
 <% if @enrollments.any? %>
   <div class="table-responsive my-1">
     <table class="table table-sm">
