--- a/app/views/shared/_flash_message.html.erb
+++ b/app/views/shared/_flash_message.html.erb
@@ -16,6 +16,7 @@
   });
 
   function dismissFlash() {
+    // $('.alert-auto-dismiss').slideUp();
     $('.alert-auto-dismiss').alert('close');
   }
 </script>
