--- a/app/views/rounds/_toss_completed.html.erb
+++ b/app/views/rounds/_toss_completed.html.erb
@@ -1,9 +1,12 @@
-<div class="alert alert-success" role="alert">
-  <h4 class="alert-heading">A je vyžrebované!</h4>
-  <hr>
-  <p class="mb-0">
-    POZOR! Všetky teraz vyžrebované zápasy sú zatiaľ <strong>nezverejnené</strong>.
-    Je potrebné ich zrevidovať a zverejniť, aby ich hráči videli na stránke.
-  </p>
+<div class="row">
+  <div class="col">
+    <div class="alert alert-success my-2" role="alert">
+      <h4 class="alert-heading">A je vyžrebované!</h4>
+      <hr>
+      <p class="mb-0 text-justify">
+        <strong>POZOR!</strong> Všetky teraz vyžrebované zápasy sú zatiaľ <strong>nezverejnené</strong>.
+        Je potrebné ich zrevidovať a zverejniť, aby ich hráči videli na stránke.
+      </p>
+    </div>
+  </div>
 </div>
-<hr>
