--- a/app/views/matches/_table_row.html.erb
+++ b/app/views/matches/_table_row.html.erb
@@ -2,14 +2,14 @@
   <td>
     <% if match.player1_id == match.winner_id %>
       <strong>
-    <% elsif match.player1 == match.retired_player %>
-      <span class="text-secondary">
-    <% end %>
-    <%= link_to(player_name_by_consent(match.player1, current_user), player_path(match.player1), class: 'quiet-link') %>
-    <% if match.player1_id == match.winner_id %>
+        <%= link_to(player_name_by_consent(match.player1, current_user), player_path(match.player1), class: 'quiet-link') %>
       </strong>
     <% elsif match.player1 == match.retired_player %>
+      <span class="text-secondary">
+        <%= link_to(player_name_by_consent(match.player1, current_user), player_path(match.player1), class: 'quiet-link') %>
       </span>
+    <% else %>
+      <%= link_to(player_name_by_consent(match.player1, current_user), player_path(match.player1), class: 'quiet-link') %>
     <% end %>
     (<%= match.player1.rankings.find { |r| r[:round_id] == match.round.id }&.points.to_i %>b)
     <br>
@@ -26,14 +26,14 @@
   <td>
     <% if match.player2_id == match.winner_id %>
       <strong>
-    <% elsif match.player2 == match.retired_player %>
-      <span class="text-secondary">
-    <% end %>
-    <%= link_to(player_name_by_consent(match.player2, current_user), player_path(match.player2), class: 'quiet-link') %>
-    <% if match.player2_id == match.winner_id %>
+        <%= link_to(player_name_by_consent(match.player2, current_user), player_path(match.player2), class: 'quiet-link') %>
       </strong>
     <% elsif match.player2 == match.retired_player %>
+      <span class="text-secondary">
+        <%= link_to(player_name_by_consent(match.player2, current_user), player_path(match.player2), class: 'quiet-link') %>
       </span>
+    <% else %>
+      <%= link_to(player_name_by_consent(match.player2, current_user), player_path(match.player2), class: 'quiet-link') %>
     <% end %>
     (<%= match.player2.rankings.find { |r| r[:round_id] == match.round.id }&.points.to_i %>b)
     <br>
