--- a/app/views/players/_form.html.erb
+++ b/app/views/players/_form.html.erb
@@ -1,15 +1,20 @@
+<%= render 'shared/validation_errors_announcement', validated_object: @player %>
 <%= form_with(model: player, local: true) do |form| %>
   <div class="row">
     <div class="col-lg-6">
-      <div class="field form-group">
-        <%= form.label :first_name, 'Meno' %><br />
-        <%= form.text_field :first_name, autofocus: true, class: add_error_class_to('form-control', @player, :first_name) %>
+      <div class="<%= add_error_class_to('pl-2', @player, :first_name) %>">
+        <div class="field form-group">
+          <%= form.label :first_name, 'Meno' %><br />
+          <%= form.text_field :first_name, autofocus: true, class: 'form-control' %>
+        </div>
       </div>
     </div>
     <div class="col-lg-6">
-      <div class="field form-group">
-        <%= form.label :last_name, 'Priezvisko' %><br />
-        <%= form.text_field :last_name, class: add_error_class_to('form-control', @player, :last_name) %>
+      <div class="<%= add_error_class_to('pl-2', @player, :last_name) %>">
+        <div class="field form-group">
+          <%= form.label :last_name, 'Priezvisko' %><br />
+          <%= form.text_field :last_name, class: 'form-control' %>
+        </div>
       </div>
     </div>
   </div>
@@ -37,9 +42,11 @@
       </div>
     </div>
     <div class="col-lg-6">
-      <div class="form-group">
-        <%= form.label :category_id, 'Kategória' %><br />
-        <%= form.collection_select :category_id, Category.default, :id, :name, {}, { class: add_error_class_to('form-control', @player, :category) } %>
+      <div class="<%= add_error_class_to('pl-2', @player, :category) %>">
+        <div class="form-group">
+          <%= form.label :category_id, 'Kategória' %><br />
+          <%= form.collection_select :category_id, Category.default, :id, :name, {}, { class: 'form-control' } %>
+        </div>
       </div>
     </div>
   </div>
