--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -95,7 +95,7 @@ a.quiet-link {
 // Form errors
 
 .field-error {
-  outline: 3px solid red !important;
+  border-left: 3px solid red !important;
 }
 
 .field_with_errors { display: inline; }
