--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -29,7 +29,9 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <%= link_to 'Kolá a zápasy', rounds_path, class: 'dropdown-item' %>
               <%= link_to 'Hráči', enrollments_path, class: 'dropdown-item'  %>
+              <%= link_to 'Novinky', articles_path, class: 'dropdown-item'  %>
               <%= link_to 'Kategórie', categories_path, class: 'dropdown-item'  %>
+              <div class="dropdown-divider"></div>
               <%= link_to 'Kredit', payments_path, class: 'dropdown-item' %>
             </div>
           </li>
