--- a/app/views/rounds/show.html.erb
+++ b/app/views/rounds/show.html.erb
@@ -58,19 +58,15 @@
             <th scope="col">Meno</th>
             <th scope="col">Body</th>
             <th scope="col">Body pre žreb</th>
-            <th></th>
           </tr>
         </thead>
         <tbody>
           <% @players_without_match.each do |player| %>
             <tr>
-              <td><%= check_box_tag 'players_in_toss[]', player.id, true %></td>
-              <td><%= player_name_by_consent(player, current_user) %></td>
-              <td><%= player.rankings.find { |r| r[:round_id] == @round.id }&.points %></td>
-              <td><%= player.rankings.find { |r| r[:round_id] == @round.id }&.toss_points %></td>
-              <td>
-                <%= link_to 'Detail', player_path(player), class: 'btn btn-sm btn-success' %>
-              </td>
+              <td><div class="form-check"><%= check_box_tag "toss_this_player_#{player.id}", nil, true, class: 'form-check-input element-enabler', data: { 'element-id' => "toss_points_#{player.id}" } %></div></td>
+              <td><%= link_to player_name_by_consent(player, current_user), player_path(player), class: 'quiet-link' %></td>
+              <td><%= player.rankings.find { |r| r[:round_id] == @round.id }.points %></td>
+              <td><%= text_field_tag "toss_points[#{player.id}]", player.rankings.find { |r| r[:round_id] == @round.id }.points, class: 'form-control toss-points' %></td>
             </tr>
           <% end %>
         </tbody>
@@ -84,3 +80,5 @@
     </div>
   </div>
 <% end %>
+
+<%= render 'rounds/scripts' %>
