--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,10 @@
 <footer class="footer mt-5">
   <div class="row">
+    <div class="col-12">
+      <p class="text-center p-2"><strong>Roger</strong> <small>●</small> <i>4ever</i> <small>●</small> <strong>#1</strong></p>
+    </div>
+  </div>
+  <div class="row">
     <div class="col-xs-12 col-md-6">
       <div class="mt-1 py-4">
         <p class="text-center">
