Changed page footer

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,12 @@
 <footer class="footer mt-5">
   <div class="row">
     <div class="col-12">
-      <p class="text-center p-2"><strong>Roger</strong> <small>●</small> <i>4ever</i> <small>●</small> <strong>#1</strong></p>
+      <p class="text-center p-2">
+        <strong>Roger</strong>
+        <small>♥</small>
+        <i>4ever</i>
+        <strong>#1</strong>
+      </p>
     </div>
   </div>
   <div class="row">
